Adding configuration for openstack-cloud-config

--- a/roles/kubernetes/node/templates/cloud-configs/openstack-cloud-config.j2
+++ b/roles/kubernetes/node/templates/cloud-configs/openstack-cloud-config.j2
@@ -52,3 +52,7 @@ monitor-delay={{ openstack_lbaas_monitor_delay }}
 monitor-timeout={{ openstack_lbaas_monitor_timeout }}
 monitor-max-retries={{ openstack_lbaas_monitor_max_retries }}
 {% endif %}
+
+[Networking]
+public-network-name=public
+ipv6-support-disabled=false
